# CrewAI-Content

./: README.md  pyproject.toml  run.py  setup.py  simple_test.py  test_api.py
content_creation_flow_main/src/content_creation_flow/crews/content_crew/: content_crew.py
content_creation_flow_main/src/content_creation_flow/crews/content_crew/agents/: __init__.py
content_creation_flow_main/src/content_creation_flow/crews/content_crew/tasks/: __init__.py
src/content_creation_flow/: main.py
src/content_creation_flow/crews/content_crew/config/: agents.yaml  tasks.yaml
