[project]
name = "content_creation_flow"
version = "0.1.0"
description = "content_creation_flow using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.120.1,<1.0.0",
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
]

[project.scripts]
kickoff = "content_creation_flow.flow:kickoff"
run_crew = "content_creation_flow.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
